# GithubActions

./: .bandit  .dockerignore  .flake8  .gitignore  CICD_ERROR_GUIDE.md  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements-runtime.txt  requirements.txt  run_pipeline.sh  sonar-project.properties
.github/workflows/: ci-cd.yml
app/: database.py  main.py  models.py  routes.py
docs/: sonarqube-trivy.md
jenkins/: README.md
reports/: coverage.xml
tests/: conftest.py  test_categories.py  test_health.py  test_items.py  test_stats.py  test_users.py
